# CollisionDetection

./: AABB_custom_example.cpp  AABB_ray_shooting_example.cpp  CMakeLists.txt  README.md  boolean_operation.cpp  collision_detection.cpp  collision_detection_kidney.cpp  test_triangle_intersection.cpp
geometry/: algo.cpp  algo.h  mymesh.cpp  mymesh.h  utils.cpp  utils.h
models/kidney/: kidney_part_10.off  kidney_part_11.off  kidney_part_13.off  kidney_part_2.off  kidney_part_4.off  kidney_part_5.off  kidney_part_7.off  kidney_part_8.off  kidney_part_9.off
models/kidney_AS/: cortex of kidney.off  hilum of kidney.off  kidney calyx.off  major calyx.off  minor calyx.off  outer cortex of kidney.off  renal column.off  renal medulla.off  renal papilla.off  renal pelvis.off  renal pyramid.off
models/kidney_AS_2/: capsule_from_meshlab.off  kidney capsule.off
models/output/: kidney_part_10.off  kidney_part_2.off  kidney_part_5.off  kidney_part_9.off
models/tissue/: tissue.off  tissue10.off  tissue11.off  tissue12.off  tissue13.off  tissue14.off  tissue15.off  tissue16.off  tissue17.off  tissue18.off  tissue19.off  tissue2.off  tissue20.off  tissue3.off  tissue4.off  tissue5.off  tissue7.off  tissue8.off  tissue9.off
